--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-## by deafult using tf wiith cpu not gpu here
-tensorflow-cpu==2.17.0
-pandas
-numpy
+tensorflow==2.15.0
+pandas 
+numpy 
 scikit-learn
 tensorboard
 matplotlib
 streamlit
+scikeras
